@@ -10,6 +10,7 @@ netcfg (0.72) UNRELEASED; urgency=low
     - Ask netcfg/choose_interface at prio critical. (Closes: #257963)
     - Build with NDEBUG.
     - Indicate which interfaces are wireless. (Closes: #258338)
+    - Cut off domain when seeding hostname from DNS. (Closes: #258852)
   * Colin Watson
     - Fix typo (s/occured/occurred/g). Unfuzzy translations.
 
